app/globals.css
@import "tailwindcss";

:root {
}

@theme inline {
	--font-poppins: var(--font-poppins);
	--font-sans: var(--font-noto-sans);
	--font-mono: var(--font-noto-sans-mono)
}

@theme {
  --color-rosewater: #f5e0dc;
	--color-flamingo: #f2cdcd;
	--color-pink: #f5c2e7;
	--color-mauve: #cba6f7;
	--color-red: #f38ba8;
	--color-maroon: #eba0ac;
	--color-peach: #fab387;
	--color-yellow: #f9e2af;
	--color-green: #a6e3a1;
	--color-teal: #94e2d5;
	--color-sky: #89dceb;
	--color-sapphire: #74c7ec;
	--color-blue: #89b4fa;
	--color-lavender: #b4befe;
	--color-text: #cdd6f4;
	--color-subtext1: #bac2de;
	--color-subtext0: #a6adc8;
	--color-overlay2: #9399b2;
	--color-overlay1: #7f849c;
	--color-overlay0: #6c7086;
	--color-surface2: #585b70;
	--color-surface1: #45475a;
	--color-surface0: #313244;
	--color-base: #1e1e2e;
	--color-mantle: #181825;
	--color-crust: #11111b;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: var(--color-crust);
    --foreground: var(--color-text);
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

#id_modal {
	z-index: 100;
}

@layer components {
	.icon {
		@apply size-[16] p-[6];
	}

	.icon-button {
		@apply  cursor-pointer rounded-full hover:bg-overlay0/50;
	}

	.text-button {
		@apply py-2 px-3 rounded-4xl;
		@apply bg-transparent text-lavender hover:bg-lavender/25 disabled:text-lavender/25;
	}

	.modal {
		@apply z-1000000;
	}

	.option-menu {
		@apply flex flex-col w-72 bg-surface0 border-overlay1 shadow-sm shadow-overlay2 rounded-sm cursor-default;

		.option-item {
			@apply flex flex-row items-center py-1 hover:bg-overlay2/20 cursor-pointer;

			.icon {
				@apply w-4 mx-4 mr-4;
			}

			.option-item-text {
				@apply text-text;
			}
		}

		.option-item > .option-item-text:first-child {
			@apply pl-4;
		}

		.option-item:first-child {
			@apply mt-2;
		}

		.option-item:last-child {
			@apply mb-2;
		}

		.option-seperator {
			@apply border-overlay0 my-2;
		}
	}

	.drivePageHeading {
		@apply text-2xl text-lavender;
	}

	/* EmptyState */

	.emptyState {
		@apply w-full h-full;
		@apply flex flex-col justify-center items-center;

		.emptyStateTitle {
			@apply text-xl mt-10;
		}

		.emptyStatePara {
			@apply mt-2;
			@apply text-subtext0;
		}
	}

	/* FileListView */

	.fileListView {
		@apply select-none w-full;

		.fileListViewHead {
			@apply h-12 border-2 border-b-surface0 border-t-transparent border-l-transparent border-r-transparent;
			@apply grid grid-cols-[minmax(0,3fr)_minmax(0,2fr)_minmax(0,2fr)_64px];
			@apply font-bold;

			& > div {
				@apply flex items-center;
			}
		}

		.fileListViewBody {
			@apply w-full;

			.fileListRow {
				@apply h-12 border-b-2 border-surface0 hover:bg-overlay0/30;
				@apply grid grid-cols-[minmax(0,3fr)_minmax(0,2fr)_minmax(0,2fr)_64px];

				& > div {
					@apply flex flex-row items-center;
				}

				.listColumn_elipsis {
					@apply mx-2 shrink-0;
				}
			}
		}
	}
}

